--- a/.github/workflows/sync_to_huggingface_hub.yml
+++ b/.github/workflows/sync_to_huggingface_hub.yml
@@ -16,5 +16,6 @@ jobs:
           fetch-depth: 0
       - name: Push to hub
         env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: git push --force https://Dayozoe:$HF_TOKEN@huggingface.co/spaces/Dayozoe/stockbotadviser main
