--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-absl-py==2.1.0
-aiohttp==3.9.3
+aiohttp==3.9.5
 aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
 appdirs==1.4.4
 asgiref==3.8.1
+astor==0.8.1
 asttokens==2.4.1
-astunparse==1.6.3
 attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.2
@@ -26,85 +25,70 @@ comm==0.2.2
 contourpy==1.2.1
 cufflinks==0.17.3
 cycler==0.12.1
-dacite==1.8.1
 dataclasses-json==0.6.4
 decorator==5.1.1
 Deprecated==1.2.14
 distro==1.9.0
+duckdb==0.10.2
 executing==2.0.1
+Faker==19.13.0
 fastapi==0.110.1
 filelock==3.13.4
 flatbuffers==24.3.25
 fonttools==4.51.0
-frozendict==2.4.1
+frozendict==2.4.2
 frozenlist==1.4.1
 fsspec==2024.3.1
-gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.29.0
-google-pasta==0.2.0
 googleapis-common-protos==1.63.0
 greenlet==3.0.3
 grpcio==1.62.1
 h11==0.14.0
-h5py==3.11.0
 html5lib==1.1
-htmlmin==0.1.12
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.7
-ImageHash==4.3.1
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
-install==1.3.5
 ipython==8.23.0
 ipywidgets==8.1.2
 jedi==0.19.1
 Jinja2==3.1.3
-joblib==1.4.0
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyterlab_widgets==3.0.10
-keras==3.2.1
 kiwisolver==1.4.5
 kubernetes==29.0.0
-langchain==0.1.15
-langchain-community==0.0.32
-langchain-core==0.1.41
+langchain==0.1.16
+langchain-community==0.0.33
+langchain-core==0.1.44
 langchain-experimental==0.0.57
 langchain-text-splitters==0.0.1
-langsmith==0.1.45
-libclang==18.1.1
-llvmlite==0.42.0
+langsmith==0.1.48
 lxml==5.2.1
-Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib==3.8.4
-matplotlib-inline==0.1.6
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.3.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
-multimethod==1.11.2
 multitasking==0.0.11
 mypy-extensions==1.0.0
-namex==0.0.7
-networkx==3.3
-numba==0.59.1
 numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.17.1
-openai==1.17.0
+onnxruntime==1.17.3
+openai==1.21.2
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -115,52 +99,46 @@ opentelemetry-proto==1.24.0
 opentelemetry-sdk==1.24.0
 opentelemetry-semantic-conventions==0.45b0
 opentelemetry-util-http==0.45b0
-opt-einsum==3.3.0
-optree==0.11.0
-orjson==3.10.0
+orjson==3.10.1
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.2
+pandasai==2.0.24
 parso==0.8.4
-patsy==0.5.6
-peewee==3.17.1
+peewee==3.17.3
 pexpect==4.9.0
-phik==0.12.4
 pillow==10.3.0
-plotly==5.20.0
+plotly==5.21.0
 posthog==3.5.0
 prompt-toolkit==3.0.43
 protobuf==4.25.3
 ptyprocess==0.7.0
-pulsar-client==3.4.0
+pulsar-client==3.5.0
 pure-eval==0.2.2
 pyarrow==15.0.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-pydantic==2.6.4
-pydantic_core==2.16.3
+pydantic==2.7.0
+pydantic_core==2.18.1
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.2
-pypd==1.1.0
 pypdf==4.2.0
 PyPika==0.48.9
 pyproject_hooks==1.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-PyWavelets==1.6.0
 PyYAML==6.0.1
 referencing==0.34.0
-regex==2023.12.25
+regex==2024.4.16
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
-safetensors==0.4.2
-scipy==1.11.4
-seaborn==0.12.2
+scipy==1.13.0
+setuptools==69.5.1
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
@@ -169,27 +147,16 @@ soupsieve==2.5
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 starlette==0.37.2
-statsmodels==0.14.1
 streamlit==1.33.0
 sympy==1.12
-tabulate==0.9.0
 tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-io-gcs-filesystem==0.36.0
-termcolor==2.4.0
 tiktoken==0.6.0
-tokenizers==0.15.2
+tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
-torch==2.2.2
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
-transformers==4.39.3
-triton==2.2.0
-typeguard==4.2.1
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.11.0
@@ -197,18 +164,14 @@ tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
-visions==0.7.6
 watchdog==4.0.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.7.0
 websockets==12.0
-Werkzeug==3.0.2
 widgetsnbextension==4.0.10
-wordcloud==1.9.3
 wrapt==1.16.0
 yarl==1.9.4
-ydata-profiling==4.7.0
-yfinance==0.2.37
+yfinance==0.2.38
 zipp==3.18.1
